[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[dependencies]
blake3 = "1.5.3"
chrono = "0.4.38"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pem = "3.0.4"
rand = "0.8.5"
rlp = "0.5.2"
secp256k1 = {version = "0.29.0", features = ["rand-std", "hashes-std", "serde"]}
